# backend

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
adminapi/: apps.py  permissions.py  serializers.py  tests.py  urls.py  views.py
catalog/: admin.py  models.py  serializers.py  tests.py  views.py
catalog/migrations/: 0001_initial.py  0002_alter_partner_options_alter_partnergroup_options_and_more.py
config/: settings.py  urls.py
contact/: admin.py  apps.py  models.py  serializers.py  tests.py  views.py
contact/migrations/: 0001_initial.py  0002_alter_submission_options.py
core/: admin.py  apps.py  groups.py  models.py  serializers.py  test_admin.py  test_editor_group.py  test_i18n.py  test_seed.py  tests.py  views.py
core/management/commands/: seed_content.py  sync_editor_group.py
core/migrations/: 0001_initial.py  0002_alter_sociallink_options.py
locale/ru/LC_MESSAGES/: django.mo  django.po
locale/uz/LC_MESSAGES/: django.mo  django.po
news/: admin.py  models.py  serializers.py  tests.py  validators.py  views.py
news/migrations/: 0001_initial.py  0002_alter_article_options.py  0003_articleimage.py
pages/: admin.py  apps.py  models.py  serializers.py  tests.py  views.py
pages/migrations/: 0001_initial.py  0002_alter_architecturenode_options_and_more.py
scripts/: compile_messages.py
seed/: export_frontend_data.mjs
static/admin/css/: assembly-admin.css
templates/admin/: base_site.html
