[project]
name = "assembly-backend"
version = "0.1.0"
description = "Django API and admin backend for Assembly."
requires-python = ">=3.12,<3.15"
dependencies = [
    "Django==6.0.7",
    "django-cors-headers==4.9.0",
    "django-environ==0.14.0",
    "djangorestframework==3.17.1",
    "gunicorn==26.0.0",
    # Required by ImageField: Django's system check fields.E210 fails without it.
    "Pillow==12.1.0",
    "psycopg[binary]==3.3.4",
    "whitenoise==6.12.0",
]

[tool.uv]
package = false
